Pipeline scrript fixed

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build_test:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout of the repo
@@ -22,9 +22,6 @@ jobs:
         
     - name: Install dependencies
       run: npm install
-      
-  run_unit_tests:
-    runs-on: ubuntu-latest
-    steps:
+
     - name: Run Unit tests
       run: npm run test:unit
