--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,3 +25,6 @@ jobs:
 
     - name: Run Unit tests
       run: npm run test:unit
+      
+    - name: Display Username
+      run: echo 'HeliXs66'
