--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,3 +28,29 @@ jobs:
       
     - name: Display Username
       run: echo 'HeliXs66'
+
+  run_ui_tests:
+    needs: build_test
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout of the repo
+      uses: actions/checkout@v4
+      
+    - name: Use Node.js 20
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20.x
+        cache: 'npm'
+
+    - name: Install dependencies
+      run: npm install
+  
+    - name: Install playwright browsers
+      run: npx playwright install
+
+    - name: Start application
+      run: npm start &
+
+    - name: Run UI tests
+      run: npm run test:ui
